# BitAlchemy

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.bak  LICENSE  README.md  build.zig  custom_dark_theme.css  mingw.cmake  sample.cpp
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw/example/: Makefile  cmake_install.cmake
build-mingw/example/Line/: Makefile  cmake_install.cmake
build-mingw/example/RandomTests/: Makefile  cmake_install.cmake
build-mingw/example/Skeleton/: Makefile  cmake_install.cmake
build-mingw/example/TestMap/: Makefile  cmake_install.cmake
build-mingw/example/Text/: Makefile  cmake_install.cmake
dirs/bit-alchemy/assets/: assets_installer
dirs/bit-alchemy/assets/Textures/: DemoLevel_mossy.tmx  first-tileset.tmx  oak_forest.tmx  oak_woods_tileset.tsx
dirs/bit-alchemy/assets/XML/: 32x32tileset.tsx  Interiors_free_32x32.tsx  Room_Builder_free_32x32.tsx  classroom.tmx  isometric-test.tmx
docs/latex/: AISystem_8hpp_source.tex  AI_8hpp_source.tex  Angle_8hpp_source.tex  AnimationSystem_8hpp_source.tex  Animation_8hpp_source.tex  BitAlchemySplash_8hpp_source.tex  Boundable_8hpp_source.tex  BoxCollider_8hpp_source.tex  CameraSystem_8hpp_source.tex  Camera_8hpp_source.tex  Circle_8hpp_source.tex  Collidable_8hpp_source.tex  Collider_8hpp_source.tex  CollisionSystem_8hpp_source.tex  Color_8hpp_source.tex  ComponentSystem_8hpp_source.tex  Component_8hpp_source.tex  DebugHelper_8hpp_source.tex  Drawable_8hpp_source.tex  Engine_8hpp_source.tex  EntityManager_8hpp_source.tex  Entity_8hpp_source.tex  FunctionalCollidable_8hpp_source.tex  Inaccessible_8hpp_source.tex  InputManager_8hpp_source.tex  Input_8hpp_source.tex  KeyboardControlSystem_8hpp_source.tex  KeyboardControl_8hpp_source.tex  KeyboardInput_8hpp_source.tex  Line_8hpp_source.tex  MouseControlSystem_8hpp_source.tex  MouseControl_8hpp_source.tex  MouseInput_8hpp_source.tex  MovementSystem_8hpp_source.tex  MusicPlayer_8hpp_source.tex  ProgrammedAI_8hpp_source.tex  Quadtree_8hpp_source.tex  Rect_8hpp_source.tex  RenderSystem_8hpp_source.tex  ResourceManager_8hpp_source.tex  (+204 more)
example/: CMakeLists.txt
example/Line/: CMakeLists.txt  LineScene.cpp  LineScene.hpp  main.cpp
example/RandomTests/: CMakeLists.txt  SDL_Files.cpp
example/Skeleton/: BlueCharEntity.cpp  CMakeLists.txt  SkeletonEntity.cpp  SkeletonEntity.hpp  SkeletonScene.cpp  SkeletonScene.hpp  main.cpp
example/TestMap/: CMakeLists.txt  TestMapScene.cpp  TestMapScene.hpp  main.cpp
example/Text/: CMakeLists.txt  TextScene.cpp  TextScene.hpp  main.cpp
include/BA/: Engine.hpp  Globals.hpp  ResourceManager.hpp  Types.hpp  build.zig.zon
include/BA/Cointainers/: Quadtree.hpp
include/BA/Components/: Animation.hpp  Boundable.hpp  Camera.hpp  Collidable.hpp  Component.hpp  Drawable.hpp  FunctionalCollidable.hpp  KeyboardControl.hpp  MouseControl.hpp  SoundEmitter.hpp  Sprite.hpp  Text.hpp  Timer.hpp  Transform2D.hpp  Transformable.hpp  Velocity.hpp
include/BA/Components/AI/: AI.hpp  ProgrammedAI.hpp
include/BA/Components/Colliders/: BoxCollider.hpp  Collider.hpp
include/BA/Containers/: Quadtree.hpp
include/BA/Entities/: Entity.hpp  SharedContext.hpp  Transformable.hpp
include/BA/Exceptions/: Inaccessible.hpp
include/BA/Generator/: TileMapGenerator.hpp
include/BA/Inputs/: Input.hpp  InputManager.hpp  KeyboardInput.hpp  MouseInput.hpp
include/BA/Resources/: ConfigLoader.hpp  PathFinder.hpp  ResourceCenter.hpp  ResourceManager.hpp  Warehouse.hpp
include/BA/Resources/Wrapper/: Font.hpp  Music.hpp  Sound.hpp  Texture.hpp
include/BA/Scenes/: BitAlchemySplash.hpp  Scene.hpp  SceneManager.hpp
include/BA/System/: Point2.hpp
include/BA/Systems/: AISystem.hpp  AnimationSystem.hpp  CameraSystem.hpp  CollisionSystem.hpp  ComponentSystem.hpp  EntityManager.hpp  InputManager.hpp  KeyboardControlSystem.hpp  MouseControlSystem.hpp  MovementSystem.hpp  MusicPlayer.hpp  Rect.hpp  RenderSystem.hpp  SoundSystem.hpp  TimerSystem.hpp  Vector2.hpp  VelocityWithCollisionSystem.hpp
include/BA/Tools/: ConfigLoader.hpp  ConfigMap.hpp  DebugHelper.hpp
include/BA/Utilities/: Angle.hpp  Angle.inl  Circle.hpp  Circle.inl  Color.hpp  Color.inl  Line.hpp  Rect.hpp  Rect.inl  Transform.hpp  Transform.inl  Vector2.hpp  Vector2.inl
include/BA/Window/: View.hpp  Window.hpp
samples/: CMakeLists.txt
samples/Animation/: SkeletonEntity.cpp  SkeletonEntity.hpp  main.cpp
samples/RandomTests/: SDL_Files.cpp
samples/Skeleton/: BlueCharEntity.cpp  BlueCharEntity.hpp  CMakeLists.txt  SkeletonEntity.cpp  SkeletonEntity.hpp  SkeletonScene.cpp  SkeletonScene.hpp  main.cpp
samples/TestMap/: TestMapScene.cpp  TestMapScene.hpp  main.cpp
src/: Component.cpp  Engine.cpp  Entity.cpp  Transform2D.cpp  Window.cpp
src/BA/: Engine.cpp  Globals.cpp  ResourceManager.cpp
src/BA/Components/: Animation.cpp  Camera.cpp  Collidable.cpp  Component.cpp  Drawable.cpp  FunctionalCollidable.cpp  KeyboardControl.cpp  MouseControl.cpp  SoundEmitter.cpp  Sprite.cpp  Text.cpp  Timer.cpp  Transformable.cpp  Velocity.cpp
src/BA/Components/AI/: AI.cpp  ProgrammedAI.cpp
src/BA/Components/Colliders/: BoxCollider.cpp  Collider.cpp
src/BA/Entities/: Entity.cpp  Transformable.cpp
src/BA/Entity/: Entity.cpp
src/BA/Exceptions/: Inaccessible.cpp
src/BA/Generator/: TileMapGenerator.cpp
src/BA/Inputs/: Input.cpp  InputManager.cpp  KeyboardInput.cpp  MouseInput.cpp
src/BA/Resources/: PathFinder.cpp  Texture.cpp  Warehouse.cpp
src/BA/Resources/Wrapper/: Font.cpp  Music.cpp  (+2 more)
src/BA/Scenes/: BitAlchemySplash.cpp  Scene.cpp  SceneManager.cpp
src/BA/Systems/: AISystem.cpp  AnimationSystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  ComponentSystem.cpp  EntityManager.cpp  InputManager.cpp  KeyboardControlSystem.cpp  MouseControlSystem.cpp  MovementSystem.cpp  MusicPlayer.cpp  RenderSystem.cpp  SoundSystem.cpp  TimerSystem.cpp  VelocityWithCollisionSystem.cpp
src/BA/Tools/: ConfigLoader.cpp  DebugHelper.cpp
src/BA/Utilities/: Angle.cpp  Transform.cpp
src/BA/Window/: View.cpp  Window.cpp
src/tinyxml2/: tinyxml2.cpp
